# scallion

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: main.py
example_generated_package/: MANIFEST.in  README.md  setup.py
example_generated_package/tests/: test_greet.py
generator/: __init__.py  config.py  graph.py  prompts.py  schema.py  state.py
generator/nodes/: executor.py  finalizer.py  planner.py  planner_fallback_package.py  validator.py
generator/runtime/: __init__.py  fs.py  sanitize.py
tests/: test_validator.py
utils/: base64_to_image.py
